<resources>
    <string name="app_name">Cash Caretaker</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_account">Add Account</string>
    <string name="account_name">Account Name</string>
    <string name="account_balance">Account Balance</string>
    <string name="submit">Submit</string>
    <string name="err_account_name_exists">An account with this name already exists.</string>
    <string name="err_account_name_invalid">Please enter a valid account name.</string>
    <string name="err_account_balance_invalid">Please enter a valid account amount.</string>
    <string name="add_account">Add Account</string>
    <string name="create_withdrawal">Create Withdrawal</string>
    <string name="create_deposit">Create Deposit</string>
    <string name="account_transactions">%1$s Transactions</string>
    <string name="description">Description</string>
    <string name="amount">Amount</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="edit_transaction">Edit Transaction</string>
    <string name="error_invalid_description">Please enter a valid description.</string>
    <string name="error_invalid_amount">Please enter a valid amount.</string>
    <string name="add_withdrawal">Add Withdrawal</string>
    <string name="add_deposit">Add Deposit</string>
    <string name="withdrawal">Withdrawal</string>
    <string name="date">Date</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="fingerprint_preference_key">fingerprint_preference</string>
    <string name="fingerprint_preference_summary">Use the fingerprint scanner to secure the application.</string>
    <string name="fingerprint_preference_title">Use Fingerprint?</string>
    <string name="pin_preference_key">pin_preference</string>
    <string name="pin_preference_summary">Use a pin to secure the application.</string>
    <string name="pin_preference_title">Use Pin?</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="confirm_fingerprint">Confirm fingerprint to continue into Cash Caretaker.</string>
    <string name="security_preferences_key">Security Preferences Category</string>
    <string name="fingerprint_fatal_error">Unable to confirm fingerprint. Please restart the application.</string>
    <string name="from_account">From Account</string>
    <string name="to_account">To Account</string>
    <string name="transfer">Transfer</string>
    <string name="add_transfer">Add Transfer</string>
    <string name="no_accounts">No Accounts</string>
    <string name="no_accounts_message">Looks like you don\'t have any accounts! Click the button below to add one.</string>
    <string name="no_transactions">No Transactions</string>
    <string name="no_transactions_message">Looks like you don\'t have any transactions! Click the button below to add one.</string>
</resources>
